# cerebro

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yml  bug_report.md  config.yml  feature-request.yml  feature_request.md  openspec-change.yml
.github/workflows/: ci.yml
contracts/openapi/: openapi.json
docker/: backend.Dockerfile  nginx.conf  ui.Dockerfile
docs/: README.md  build-your-own-viz.md  cli-guide.md  dashboard-readiness.md  schema-spec.md
docs/audits/: design-token-diff.md  ui-fidelity-gaps.md
examples/: binary.cerebro.json  binary_artifact.cerebro.json  multi_output_artifact.cerebro.json  multiclass.cerebro.json  multiclass_artifact.cerebro.json  ranker.cerebro.json  ranker_artifact.cerebro.json  regression.cerebro.json  regression_artifact.cerebro.json
openspec/: project.md
openspec/changes/archive/2026-05-28-bootstrap-m0-scaffolding/: design.md  tasks.md
openspec/changes/archive/2026-05-28-m2-variant-coverage/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-28-m3-data-explanations-evaluation/: proposal.md  tasks.md
openspec/changes/archive/2026-05-29-m4-agent-polish/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-29-model-registry/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-30-data-readiness-and-synthetic/: proposal.md
openspec/changes/bootstrap-m0-scaffolding/: proposal.md  tasks.md
openspec/changes/data-readiness-and-synthetic/: design.md  tasks.md
openspec/changes/m1-walking-skeleton/: design.md  proposal.md  tasks.md
openspec/changes/m3-data-explanations-evaluation/: design.md  tasks.md
openspec/changes/mvp-2/: design.md  proposal.md  tasks.md
openspec/specs/ai-agent/: spec.md
openspec/specs/ai-agent-impl/: spec.md
openspec/specs/api/: spec.md
openspec/specs/canonical-schema/: spec.md
openspec/specs/dashboard/: spec.md
openspec/specs/data-ingestion/: spec.md
openspec/specs/data-readiness/: spec.md
openspec/specs/distribution/: spec.md
openspec/specs/evaluation/: spec.md
openspec/specs/explanations/: spec.md
openspec/specs/extraction/: spec.md
openspec/specs/importance/: spec.md
openspec/specs/model-registry/: spec.md
openspec/specs/registry/: spec.md
openspec/specs/synthetic-inputs/: spec.md
schemas/registry/v1/: init.sql
schemas/registry/v2/: init.sql
schemas/v1/: cerebro-artifact.schema.json
scripts/: check_contracts.py  export_openapi.py  export_schema.py  generate_examples.py  seed_dev_data.py
src/cerebro/: __init__.py  exceptions.py  logging.py
src/cerebro/agent/: __init__.py  base.py  context.py  prompts.py  providers.py
src/cerebro/analyzers/: __init__.py  diff.py  evaluation.py  explanations.py  feature_diagnostics.py  importance.py  readiness.py  synthetic.py  thresholds.py
src/cerebro/api/: __init__.py  app.py  deps.py  handlers.py
src/cerebro/api/routes/: __init__.py  agent.py  artifacts.py  data_profile.py  diagnostics.py  diff.py  evaluation.py  explanations.py  health.py  importance.py  ingest.py  models.py  tags.py
src/cerebro/cli/: __init__.py  main.py
src/cerebro/data/: __init__.py  loader.py  profiler.py
src/cerebro/extractors/: __init__.py  _lightgbm_base.py  _xgboost_base.py  base.py  lightgbm.py  lightgbm_binary.py  lightgbm_multi_output.py  lightgbm_multiclass.py  lightgbm_ranker.py  lightgbm_regression.py  xgboost.py
src/cerebro/schema/: __init__.py
src/cerebro/schema/v1/: __init__.py  agent.py  artifact.py  data_profile.py  evaluation.py  explanations.py  importance.py  model.py  registry.py  tree.py
src/cerebro/schema/v1_1/: __init__.py  artifact.py  data_profile.py  diff.py  explanations.py  feature_diagnostics.py  importance.py  model.py  source.py
src/cerebro/storage/: __init__.py  files.py  registry.py
tests/: conftest.py  test_exceptions.py  test_logging.py
tests/agent/: test_context.py  test_context_diagnostics.py  test_context_provenance.py  test_prompts.py  test_prompts_diagnostics.py  test_providers.py
tests/analyzers/: test_diff.py  test_evaluation.py  test_explanations.py  test_feature_diagnostics.py  test_importance.py  test_readiness.py  test_synthetic.py  test_thresholds.py
tests/api/: conftest.py  test_agent_routes.py  test_artifacts.py  test_correlation_id.py  test_diagnostics_diff_tags.py  test_health.py  test_importance.py  test_m3_routes.py  test_registry_routes.py
tests/cli/: test_ask_command.py  test_diff_diagnostics.py  test_doctor_command.py  test_error_paths.py  test_extract_synthetic.py  test_extract_validate.py
tests/data/: test_loader.py  test_profiler.py
tests/e2e/: test_walking_skeleton.py
tests/extractors/: conftest.py  test_binary_with_samples.py  test_corrupt_model.py  test_lgb_binary_extractor.py  test_lightgbm_binary.py  test_m1_regression.py  test_multi_output.py  test_multiclass.py  test_pickle_loading.py  test_ranker.py  test_regression.py  test_snapshots.py  test_unsupported_objective.py  test_xgboost_extractor.py
tests/schema/: conftest.py  test_extra_keys_rejected.py  test_provenance.py  test_round_trip.py  test_v11.py  test_v11_schema.py
tests/storage/: test_atomic_write.py  test_corrupt_input.py  test_missing_path.py  test_registry.py  test_round_trip.py
ui/: components.json  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
ui/src/: App.tsx  globals.css  main.tsx  test-setup.ts
ui/src/components/: SectionLockedState.tsx  SyntheticBadge.tsx
ui/src/lib/: format.test.ts  format.ts  theme.test.ts  theme.ts  tokenColors.ts
ui/src/lib/api/: queries.ts  (+1 more)
ui/src/styles/: tokens.css
ui/src/views/: Agent.tsx  Artifacts.tsx  Data.tsx  Diff.tsx  Evaluation.tsx  Explanations.tsx  Home.tsx  Importance.test.tsx  Importance.tsx  Ingest.tsx  ModelDetail.tsx  Overview.test.tsx  Overview.tsx  Registry.tsx  Trees.test.tsx  Trees.tsx
(+47 files in other folders)
