[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cerebro"
version = "0.1.0"
description = "Model introspection platform: trained ML artifact in, canonical library-agnostic JSON out."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Bala" }]

# Core runtime deps Cerebro actually imports today + the schema foundation
# used from the next milestone. Heavy ML / web / agent stacks live under
# optional-dependencies so `uv sync` stays light by default
# (see ARCHITECTURE.md).
dependencies = [
    "pydantic>=2.13,<3",
    "structlog>=25.5,<27",
]

[project.optional-dependencies]
# Extraction stack (LightGBM-aware).
ml = [
    "lightgbm>=4.6,<5",
    "shap>=0.51,<1",
    "scikit-learn>=1.8,<2",
    "numpy>=2.4,<3",
]
# API + CLI surface.
api = [
    "fastapi>=0.136,<1",
    "uvicorn[standard]>=0.48,<1",
    "typer>=0.26,<1",
]
# AI agent provider (default impl).
agent = [
    "anthropic>=0.104,<1",
]

# Dev toolchain (PEP 735). Installed by default with `uv sync`.
[dependency-groups]
dev = [
    "ruff>=0.15,<1",
    "mypy>=2.1,<3",
    "pytest>=9.0.3,<10",
    "pytest-cov>=7,<8",
    "pytest-xdist>=3.8,<4",
    "pytest-asyncio>=1.4,<2",
    "import-linter>=2.11,<3",
    "pre-commit>=4.6,<5",
    "httpx>=0.28,<1",
]

# NOTE: the `cerebro` console script (cerebro.cli.main:app) lands in M1 when the
# CLI module exists; declaring it now would create a broken entrypoint.

[tool.hatch.build.targets.wheel]
packages = ["src/cerebro"]

# --------------------------------------------------------------------------
# Tooling
# --------------------------------------------------------------------------

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-n auto"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/cerebro"]
branch = true

# --------------------------------------------------------------------------
# import-linter — mechanically enforce the architecture boundaries.
# Invariant #2: no consumption module imports LightGBM.
# Consumption must not import the extractor implementation.
# --------------------------------------------------------------------------

[tool.importlinter]
root_package = "cerebro"
include_external_packages = true

[[tool.importlinter.contracts]]
name = "Consumption layers must not import LightGBM (invariant #2)"
type = "forbidden"
source_modules = [
    "cerebro.schema",
    "cerebro.analyzers",
    "cerebro.storage",
    "cerebro.api",
    "cerebro.agent",
]
forbidden_modules = ["lightgbm"]

[[tool.importlinter.contracts]]
name = "Consumption must not import the extractor implementation"
type = "forbidden"
source_modules = [
    "cerebro.analyzers",
    "cerebro.api",
    "cerebro.agent",
]
forbidden_modules = ["cerebro.extractors"]
