[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cerebro"
version = "0.1.0"
description = "Model introspection platform: trained ML artifact in, canonical library-agnostic JSON out."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Bala" }]

# Core runtime deps Cerebro actually imports today + the schema foundation
# used from the next milestone. Heavy ML / web / agent stacks live under
# optional-dependencies so `uv sync` stays light by default
# (see ARCHITECTURE.md).
dependencies = [
    "openai>=1.109.1",
    "pydantic>=2.13,<3",
    "python-multipart>=0.0.29",
    "structlog>=25.5,<27",
]

[project.optional-dependencies]
# Extraction stack (LightGBM-aware).
ml = [
    "lightgbm>=4.6,<5",
    "xgboost>=2.0,<3",
    "shap>=0.46,<0.48",
    "scikit-learn>=1.8,<2",
    "numpy>=2.4,<3",
    "duckdb>=1.1,<2",
]
# API + CLI surface.
api = [
    "fastapi>=0.136,<1",
    "uvicorn[standard]>=0.48,<1",
    "typer>=0.26,<1",
    "python-multipart>=0.0.20,<1",
    "openai>=1.55,<2",
]
# AI agent provider (default impl).
agent = [
    "anthropic>=0.104,<1",
]

# Dev toolchain (PEP 735). Installed by default with `uv sync`.
[dependency-groups]
dev = [
    "ruff>=0.15,<1",
    "mypy>=2.1,<3",
    "pytest>=9.0.3,<10",
    "pytest-cov>=7,<8",
    "pytest-xdist>=3.8,<4",
    "pytest-asyncio>=1.4,<2",
    "import-linter>=2.11,<3",
    "pre-commit>=4.6,<5",
    "httpx>=0.28,<1",
    # Extraction stack — pulled into dev so tests can train tiny boosters.
    # Mirrors the [ml] optional-extra in [project.optional-dependencies].
    "lightgbm>=4.6,<5",
    "xgboost>=2.0,<3",
    "scikit-learn>=1.8,<2",
    "numpy>=2.4,<3",
    "duckdb>=1.1,<2",
    "shap>=0.46,<0.48",
    # CLI + API surface — pulled in so CLI / API tests run under uv sync
    # without needing an explicit `--extra api`. Mirror of the [api] extra.
    "typer>=0.26,<1",
    "fastapi>=0.136,<1",
    "uvicorn[standard]>=0.48,<1",
    "openai>=1.55,<2",
]

[project.scripts]
cerebro = "cerebro.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/cerebro"]

# --------------------------------------------------------------------------
# Tooling
# --------------------------------------------------------------------------

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]
plugins = ["pydantic.mypy"]

# Third-party libraries without published type stubs. Imports resolve as
# Any inside the extractor / tests; the canonical schema (which is fully
# typed) is what consumers see, so untyped boundaries here are acceptable.
[[tool.mypy.overrides]]
module = ["lightgbm", "lightgbm.*", "sklearn", "sklearn.*", "shap", "shap.*", "duckdb", "duckdb.*", "openai", "openai.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-n auto"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/cerebro"]
branch = true

# --------------------------------------------------------------------------
# import-linter — mechanically enforce the architecture boundaries.
# Invariant #2: no consumption module imports LightGBM.
# Consumption must not import the extractor implementation.
# --------------------------------------------------------------------------

[tool.importlinter]
root_package = "cerebro"
include_external_packages = true

[[tool.importlinter.contracts]]
name = "Consumption layers must not import LightGBM (invariant #2)"
type = "forbidden"
source_modules = [
    "cerebro.schema",
    "cerebro.analyzers",
    "cerebro.storage",
    "cerebro.api",
    "cerebro.agent",
]
forbidden_modules = ["lightgbm"]
# ingest is a write/extraction endpoint, not a consumption route.
# _lightgbm_base imports lightgbm lazily inside _require_lightgbm() only when needed.
ignore_imports = [
    "cerebro.api.routes.ingest -> cerebro.extractors",
    "cerebro.extractors._lightgbm_base -> lightgbm",
]

[[tool.importlinter.contracts]]
name = "Consumption must not import the extractor implementation"
type = "forbidden"
source_modules = [
    "cerebro.analyzers",
    "cerebro.api",
    "cerebro.agent",
]
forbidden_modules = ["cerebro.extractors"]
# ingest is a write/extraction endpoint, not a consumption route.
# synthetic analyzer needs to load the booster from the model file.
ignore_imports = [
    "cerebro.api.routes.ingest -> cerebro.extractors",
    "cerebro.analyzers.synthetic -> cerebro.extractors._lightgbm_base",
]
